--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "~4.16.1",
     "heroku": "^7.39.1",
     "http-errors": "~1.6.3",
+    "mongoose": "^5.9.6",
     "morgan": "~1.9.1",
     "pug": "^2.0.4"
   }
