--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "npm": ">=6.4.0"
   },
   "dependencies": {
+    "connect-mongo": "^3.2.0",
     "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
+    "debug": "^2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "express-session": "^1.17.0",
     "heroku": "^7.39.1",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
