--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pug": "^2.0.4",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "session": "^0.1.0"
   }
 }
