--- a/package.json
+++ b/package.json
@@ -10,20 +10,15 @@
     "npm": ">=6.4.0"
   },
   "dependencies": {
-    "connect-mongo": "^3.2.0",
     "cookie-parser": "~1.4.4",
     "debug": "^2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
-    "express-session": "^1.17.0",
     "heroku": "^7.39.1",
     "http-errors": "~1.6.3",
     "mongoose": "^5.9.6",
     "morgan": "~1.9.1",
-    "passport": "^0.4.1",
-    "passport-local": "^1.0.0",
     "pug": "^2.0.4",
-    "request": "^2.88.2",
-    "session": "^0.1.0"
+    "request": "^2.88.2"
   }
 }
