--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "npm": ">=6.4.0"
   },
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "^2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "heroku": "^7.39.1",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "mongoose": "^5.9.6",
     "morgan": "~1.9.1",
     "pug": "^2.0.4",
